fix(canvas/share-link): Update radix dialogs to match theme and improve readability
- Update "Canvas>Share Link" dialog to match theme
- Improve "Public" vs "Private" button menu readability

Changes summary:
- Canvas share link menu now better match the theme with improved readability for the specified components.

--- a/src/sass/elements/_menu.scss
+++ b/src/sass/elements/_menu.scss
@@ -88,6 +88,9 @@
 
 	/* MODAL - Choose theme context menuitem hover active */
 	[data-state='checked'] {
+		span[class*="text-token-text-"] {
+			color: var(--c-on-accent) !important;
+		}
 
 		&,
 		&:hover {
